<resources>
    <string name="app_name">Mireaproject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_Browser">Browser</string>
    <string name="menu_Calculator">Calculator</string>
    <string name="Calcb0">0</string>
    <string name="Calcb1">1</string>
    <string name="Calcb2">2</string>
    <string name="Calcb3">3</string>
    <string name="Calcb4">4</string>
    <string name="Calcb5">5</string>
    <string name="Calcb6">6</string>
    <string name="Calcb7">7</string>
    <string name="Calcb8">8</string>
    <string name="Calcb9">9</string>

    <string name="CalcbP">+</string>
    <string name="CalcbM">-</string>
    <string name="CalcbDiv">/</string>
    <string name="CalcbMnoj">*</string>
    <string name="CalcbDEL">del</string>
    <string name="CalcbIrrat">+/-</string>
    <string name="CalcbDot">,</string>
    <string name="CalcbEquals">=</string>
    <string name="num">Ответ</string>
    <string name="menu_MusicPlayer">MusicPlayer</string>
    <string name="menu_PhotoCam">PhotoCam</string>
    <string name="Остановить">Остановить</string>
    <string name="Начать">Начать</string>
    <string name="menu_AudioRecording">AudioRecordng</string>
    <string name="menu_Input">Input</string>
    <string name="menu_History">History</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with
Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="menu_HTTP">HTTP</string>
    <string name="menu_RoomDB">RoomDB</string>
    <string name="menu_Map">Map</string>

</resources>