<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_Browser" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_Calculator" />
        <item
            android:id="@+id/nav_music"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_MusicPlayer" />
        <item
            android:id="@+id/nav_photo"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_PhotoCam" />
        <item
            android:id="@+id/nav_audiorec"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/menu_AudioRecording" />
        <item
            android:id="@+id/nav_inputSettings"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="@string/menu_Input" />
        <item
            android:id="@+id/nav_History"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_History" />
        <item
            android:id="@+id/nav_HTTPURL"
            android:title="@string/menu_HTTP" />
    </group>
</menu>