<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Calc.BlankFragmentCalc">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- TODO: Update blank fragment layout -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/CalcbDEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:onClick="DEL"
                android:text="@string/CalcbDEL" />

            <Button
                android:id="@+id/CalcbIrrat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="PLusMinus"
                android:text="@string/CalcbIrrat" />


            <Button
                android:id="@+id/CalcbP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Plus"
                android:text="@string/CalcbP" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Calcb7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="N77"
                android:text="@string/Calcb7" />

            <Button
                android:id="@+id/Calcb8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="N8"
                android:text="@string/Calcb8" />

            <Button
                android:id="@+id/Calcb9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="N9"
                android:text="@string/Calcb9" />

            <Button
                android:id="@+id/CalcbM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Minus"
                android:text="@string/CalcbM" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Calcb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="N4"
                android:text="@string/Calcb4" />

            <Button
                android:id="@+id/Calcb5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="N5"
                android:text="@string/Calcb5" />

            <Button
                android:id="@+id/Calcb6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="N6"
                android:text="@string/Calcb6" />

            <Button
                android:id="@+id/CalcbMnoj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Mnoj"
                android:text="@string/CalcbMnoj" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Calcb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="N1"
                android:text="@string/Calcb1" />

            <Button
                android:id="@+id/Calcb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="N2"
                android:text="@string/Calcb2" />

            <Button
                android:id="@+id/Calcb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="N3"
                android:text="@string/Calcb3" />

            <Button
                android:id="@+id/CalcbDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Divide"
                android:text="@string/CalcbDiv" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Calcb0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:onClick="updateScreen"
                android:text="@string/Calcb0" />

            <Button
                android:id="@+id/CalcbDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Dot"
                android:text="@string/CalcbDot" />

            <Button
                android:id="@+id/CalcbEquals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Equals"
                android:text="@string/CalcbEquals" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="380dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:hint="Введите сюда выражение"
        android:textSize="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="393dp"
        android:layout_height="73dp"
        android:ems="10"
        android:hint="@string/num"
        android:inputType="textPersonName"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="379dp"
        android:layout_height="34dp"
        android:text="Чтобы начать решать новое выражение и получить доступ к операциям нажмите DEL"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.923" />
</androidx.constraintlayout.widget.ConstraintLayout>