<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.khelimskiy.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.khelimskiy.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.khelimskiy.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_calculator"
        android:name="ru.mirea.khelimskiy.mireaproject.ui.Calc.BlankFragmentCalc"
    android:label="Калькулятор"
    tools:layout="@layout/fragment_blank_calc" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.khelimskiy.mireaproject.BlankFragment"
        android:label="Браузер"
        tools:layout="@layout/fragment_web" />
    <fragment
        android:id="@+id/nav_music"
        android:name="ru.mirea.khelimskiy.mireaproject.MusicFR"
        android:label="Музыкальный проигрыватель"
        tools:layout="@layout/fragment_mplayer" />
    <fragment
    android:id="@+id/nav_photo"
    android:name="ru.mirea.khelimskiy.mireaproject.ui.PhotoCam"
    android:label="Фотокамера"
    tools:layout="@layout/fragment_photo_cam" />
    <fragment
        android:id="@+id/nav_audiorec"
        android:name="ru.mirea.khelimskiy.mireaproject.Audiorec"
        android:label="Запись речи"
        tools:layout="@layout/fragment_audiorec" />
</navigation>